second page: - added a minimum width for the creation card - fixed the hint move animation (it used to trigger the third page one when viewing the second page) - added an isOverflown function - now using the isOverflown function to determine whether we need to give the slideshow horizontal scrolling properties the check runs every 100 ms
third page:
- justified text

Took 5 minutes

--- a/src/output.css
+++ b/src/output.css
@@ -690,10 +690,6 @@ video {
   animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
 
-.cursor-pointer {
-  cursor: pointer;
-}
-
 .select-none {
   -webkit-user-select: none;
      -moz-user-select: none;
@@ -738,10 +734,6 @@ video {
 
 .overflow-y-scroll {
   overflow-y: scroll;
-}
-
-.scroll-smooth {
-  scroll-behavior: smooth;
 }
 
 .bg-black\/70 {
@@ -929,8 +921,9 @@ video {
   /* Safari and Chrome */
 }
 
-body {
+html, body {
   font-family: "JetBrains Mono", monospace;
+  scroll-behavior: smooth;
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
 }
@@ -1052,6 +1045,7 @@ h4 {
 }
 
 .passion img {
+  pointer-events: none;
   max-height: 100%;
   border-radius: 0.5rem;
   background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
@@ -1233,6 +1227,10 @@ h4 {
   box-shadow:
         0 0 0.5px 0 rgb(229 231 235) inset,
         0 0 0.5px 0 rgb(229 231 235);
+}
+
+.project .description {
+  text-align: justify;
 }
 
 @media (min-width: 768px) {
@@ -1434,7 +1432,11 @@ h4 {
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
-  cursor: move;
+  cursor: grab;
+}
+
+.horizontal-scroll:active {
+  cursor: grabbing;
 }
 
 @media (max-height: 600px) {
@@ -1568,6 +1570,15 @@ h4 {
 }
 
 @media (min-width: 640px) {
+  .sm\:size-1\/12 {
+    width: 8.333333%;
+    height: 8.333333%;
+  }
+
+  .sm\:min-w-72 {
+    min-width: 18rem;
+  }
+
   .sm\:text-5xl {
     font-size: 3rem;
     line-height: 1;
@@ -1582,11 +1593,6 @@ h4 {
 @media (min-width: 1024px) {
   .lg\:mb-20 {
     margin-bottom: 5rem;
-  }
-
-  .lg\:size-1\/12 {
-    width: 8.333333%;
-    height: 8.333333%;
   }
 
   .lg\:p-10 {
