--- a/src/styles.css
+++ b/src/styles.css
@@ -25,8 +25,9 @@
     display: none; /* Safari and Chrome */
 }
 
-body {
+html, body {
     font-family: "JetBrains Mono", monospace;
+    scroll-behavior: smooth;
     @apply text-gray-200;
 }
 
@@ -71,7 +72,7 @@ h4 {
 }
 
 .passion img {
-    @apply max-h-full p-2 rounded-lg sm:p-3 sm:rounded-xl bg-gradient-to-br;
+    @apply max-h-full p-2 rounded-lg sm:p-3 sm:rounded-xl bg-gradient-to-br pointer-events-none;
 }
 
 .passion h4 {
@@ -157,7 +158,7 @@ h4 {
 }
 
 .project .description {
-    @apply md:max-w-[50%];
+    @apply md:max-w-[50%] text-justify;
 }
 
 .proj-button {
@@ -242,7 +243,11 @@ h4 {
 
 .horizontal-scroll {
     user-select: none;
-    cursor: move;
+    cursor: grab;
+}
+
+.horizontal-scroll:active {
+    cursor: grabbing;
 }
 
 @media (max-height: 600px) {
